--- a/Smartshop/Views/ViewInvoiceView.xaml
+++ b/Smartshop/Views/ViewInvoiceView.xaml
@@ -409,7 +409,19 @@
                                         </GridView>
                                     </ListView.View>
                                 </ListView>
-
+                                <DatePicker Margin="20" Width="400">
+                                    <DatePicker.Resources>
+                                        <Style TargetType="{x:Type DatePickerTextBox}">
+                                            <Setter Property="Control.Template">
+                                                <Setter.Value>
+                                                    <ControlTemplate>
+                                                        <TextBox Text="{Binding Path=SelectedDate, RelativeSource={RelativeSource AncestorType={x:Type DatePicker}}}" />
+                                                    </ControlTemplate>
+                                                </Setter.Value>
+                                            </Setter>
+                                        </Style>
+                                    </DatePicker.Resources>
+                                </DatePicker>
 
                             </StackPanel>
                             <!-- END ROW 3 -->
