--- a/Smartshop/Views/ViewInvoiceView.xaml
+++ b/Smartshop/Views/ViewInvoiceView.xaml
@@ -405,24 +405,11 @@
                                             <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}"/>
                                             <GridViewColumn Header="Price" DisplayMemberBinding="{Binding Price}"/>
                                             <GridViewColumn Header="Description" DisplayMemberBinding="{Binding Desc}"/>
-                                            <GridViewColumn Header="Available" DisplayMemberBinding="{Binding IsAvailable}"/>
+                                            <GridViewColumn Header="Quantity" DisplayMemberBinding="{Binding Quantity}"/>
                                         </GridView>
                                     </ListView.View>
                                 </ListView>
-                                <DatePicker Margin="20" Width="400">
-                                    <DatePicker.Resources>
-                                        <Style TargetType="{x:Type DatePickerTextBox}">
-                                            <Setter Property="Control.Template">
-                                                <Setter.Value>
-                                                    <ControlTemplate>
-                                                        <TextBox Text="{Binding Path=SelectedDate, RelativeSource={RelativeSource AncestorType={x:Type DatePicker}}}" />
-                                                    </ControlTemplate>
-                                                </Setter.Value>
-                                            </Setter>
-                                        </Style>
-                                    </DatePicker.Resources>
-                                </DatePicker>
-
+                             
                             </StackPanel>
                             <!-- END ROW 3 -->
 
